--- a/semana4.html
+++ b/semana4.html
@@ -97,7 +97,7 @@
 				<div class="section-top-border">
 						<div class="row gallery-item">
 							<div class="col-md-4">
-								<a href="img/elements/crono.png.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/crono.png.png);"></div></a>
+								<a href="img/elements/crono.png.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/crono1.png.png);"></div></a>
 						          </div>
 					        </div>
 					</div>
