--- a/semana3.html
+++ b/semana3.html
@@ -252,11 +252,11 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 						<h2 class="mb-30">REFERENCIAS</h2>
 						</div>
 					         <div class="col-md-9 mt-sm-0 right-align-p">
-								<p>1. Orovio CC. Papel de las ortesis (AFO) de la marcha en la rehabilitación del paciente con hemiplejia post ictus. :42.</p>
-							 <p>2. T. Taiming Chu ,Biomechanics of ankle-foot orthoses:past, present, and future.Top Stroke Rehabil, 7 (2001), pp. 19-28.</p>
-							 <p>3. Unidad de Lesionados Medulares de Gran Canaria. (2018). Manual de Lesionados Medulares . Las Palmas de Gran Canaria: caleidoscopio.</p>
-                                                         <p>4. José Gorgues (2007)Confección y adaptación de la ortesis antiequina de termoplástico tipo «Rancho de los amigos»Vol. 26. Núm. 10.Noviembre 2007 páginas 11-141.</p>
-							  <p>5. Innovative neurotronics. (2006). Manual del usuario del sistema Walkaide. Medical Device & QA Services.</p>
+								<p> Orovio CC. Papel de las ortesis (AFO) de la marcha en la rehabilitación del paciente con hemiplejia post ictus. :42.</p>
+							 <p>T. Taiming Chu ,Biomechanics of ankle-foot orthoses:past, present, and future.Top Stroke Rehabil, 7 (2001), pp. 19-28.</p>
+							 <p> Unidad de Lesionados Medulares de Gran Canaria. (2018). Manual de Lesionados Medulares . Las Palmas de Gran Canaria: caleidoscopio.</p>
+                                                         <p> José Gorgues (2007)Confección y adaptación de la ortesis antiequina de termoplástico tipo «Rancho de los amigos»Vol. 26. Núm. 10.Noviembre 2007 páginas 11-141.</p>
+							  <p> Innovative neurotronics. (2006). Manual del usuario del sistema Walkaide. Medical Device & QA Services.</p>
 					                  </div>
 					        </div>
 					</div>				
