--- a/semana4.html
+++ b/semana4.html
@@ -89,7 +89,7 @@
 			<!-- Start Sample Area -->
 		        <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
-					<h1 class="text-black">CRONOGRAMA</h1>	
+					<h1 class="text-black">CRONOGRAMAPLAN DE TRABAJO</h1>	
 				</div>
 			</section>
 			<!-- End Sample Area -->
@@ -97,19 +97,19 @@
 				<div class="section-top-border">
 						<div class="row gallery-item">
 							<div class="col-md-4">
-								<a href="img/elements/crono1.png.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/crono1.png.png);"></div></a>
+								<a href="img/elements/plan.png.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/plan.png.png);"></div></a>
 						          </div>
 					        </div>
 					</div>
 				 <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
-					<h1 class="text-black">PLAN DE TRABAJO</h1>	
+					<h1 class="text-black">CRONOGRAMA</h1>	
 				</div>
 			</section>
 					<div class="section-top-center">
 						<div class="row gallery-item">
 							<div class="col-md-4">
-								<a href="img/elements/plan.png.png" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/plan.png.png);"></div></a>
+								<a href="img/elements/crono1.png.png" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/crono1.png.png);"></div></a>
 							</div>
 						</div>
 					</div>
