--- a/about.html
+++ b/about.html
@@ -136,5 +136,107 @@
 			<script src="js/owl.carousel.min.js"></script>									
 			<script src="js/mail-script.js"></script>	
 			<script src="js/main.js"></script>	
+			<!-- Start Sample Area -->
+		        <section class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
+					<h1 class="text-black">CRONOGRAMAPLAN DE TRABAJO</h1>	
+				</div>
+			</section>
+			<!-- End Sample Area -->
+			<!-- Start Align Area -->
+			<section class="popular-courses-area section-gap courses-page">
+				<div class="container">
+							</div>
+						</div>
+					</div>						
+					<div class="row">
+						<div class="single-popular-carusel col-lg-3 col-md-6">
+							<div class="thumb-wrap relative">
+								<div class="thumb relative">
+									<div class="overlay overlay-bg"></div>	
+									<img class="img-fluid" src="img/p1.jpg" alt="">
+									</div>
+								<div class="meta d-flex justify-content-between">
+									<p><span class="lnr lnr-users"></span><span class="lnr lnr-bubble"></span></p>
+									<h4></h4>
+								</div>						
+							</div>
+							<div class="details">
+								<a href="course-details.html">
+									<h4>
+										Renato Rupay
+									</h4>
+								</a>
+								<p>
+									Coordinador organizacional									
+								</p>
+							</div>
+						</div>	
+						<div class="single-popular-carusel col-lg-3 col-md-6">
+							<div class="thumb-wrap relative">
+								<div class="thumb relative">
+									<div class="overlay overlay-bg"></div>	
+									<img class="img-fluid" src="img/p2.jpg" alt="">
+								</div>
+								<div class="meta d-flex justify-content-between">
+									<p><span class="lnr lnr-users"></span><span class="lnr lnr-bubble"></span></p>
+									<h4></h4>
+								</div>									
+							</div>
+							<div class="details">
+								<a href="course-details.html">
+									<h4>
+										Ana Lucia Cruzate
+									</h4>
+								</a>
+								<p>
+									Coordinadora de materiales y hardware										
+								</p>
+							</div>
+						</div>	
+						<div class="single-popular-carusel col-lg-3 col-md-6">
+							<div class="thumb-wrap relative">
+								<div class="thumb relative">
+									<div class="overlay overlay-bg"></div>	
+									<img class="img-fluid" src="img/p3.jpg" alt="">
+								</div>
+								<div class="meta d-flex justify-content-between">
+									<p><span class="lnr lnr-users"></span><span class="lnr lnr-bubble"></span></p>
+									<h4></h4>
+								</div>									
+							</div>
+							<div class="details">
+								<a href="course-details.html">
+									<h4>
+										Gloria Atencio
+									</h4>
+								</a>
+								<p>
+									Coordinadora editorial										
+								</p>
+							</div>
+						</div>	
+						<div class="single-popular-carusel col-lg-3 col-md-6">
+							<div class="thumb-wrap relative">
+								<div class="thumb relative">
+									<div class="overlay overlay-bg"></div>	
+									<img class="img-fluid" src="img/p4.jpg" alt="">
+								</div>
+								<div class="meta d-flex justify-content-between">
+									<p><span class="lnr lnr-users"></span><span class="lnr lnr-bubble"></span></p>
+									<h4></h4>
+										</div>									
+							</div>
+							<div class="details">
+								<a href="course-details.html">
+									<h4>
+										Kevin Vila
+									</h4>
+								</a>
+								<p>
+									Coordinador de información										
+								</p>
+								</div>									
+							</div>					
 		</body>
 	</html>
