--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
 			<!-- Start Sample Area -->
 		        <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
-					<h1 class="text-black">CRONOGRAMAPLAN DE TRABAJO</h1>	
+					<h1 class="text-black">CONOCE AL EQUIPO</h1>	
 				</div>
 			</section>
 			<!-- End Sample Area -->
