--- a/events.html
+++ b/events.html
@@ -147,7 +147,7 @@
 								<div class="detials col-12 col-md-6">
 									<p>Abril, 2019</p>
 									<a href="semana5.html"><h4>Semana 5</h4></a>
-									<p>Desarrollo de conceptos</p>
+									<p>Conceptos de solución</p>
 								</div>
 							</div>
 						</div>
