--- a/semana3.html
+++ b/semana3.html
@@ -174,7 +174,23 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 				</div>
 			</section>
 			<!-- End Sample Area -->
-			
+					<!-- Start Align Area -->
+			<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h2 class="mb-30">Incidencia en el mundo</h2>
+						</div>
+					         <div class="col-md-9 mt-sm-10 left-align-p">
+								<p>La incidencia de la lesión de medula espinal (LME), tanto traumáticas como no traumáticas probablemente se sitúe entre 40 y 80 casos por millón de habitantes.Sobre la base de la población mundial estimada en 2012, entre 250.000 y 500.000 personas sufren una LME.</p>
+								<p>La incidencia de las LME traumáticas declarada en estudios por países varía entre 13 por millón y 53 por millón. Históricamente, hasta el 90 por ciento de las LME han sido de origen traumático, pero datos de los estudios más recientes indican una leve tendencia al aumento de las LME no traumáticas. Los estudios disponibles reportan una incidencia de las LME no traumáticas de 26 por millón.(OMS)[1] </p>
+							</div>
+							<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/mapa.png" alt="" class="png-fluid">
+							</div>
+						</div>
+					</div>
+			<!-- End Sample Area -->
 			<!-- Start Align Area -->
 					<!-- Start Sample Area -->
 		        <section class="row d-flex align-items-center justify-content-center">
