--- a/semana3.html
+++ b/semana3.html
@@ -175,18 +175,28 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 			</section>
 			<!-- End Sample Area -->
 					<!-- Start Align Area -->
+					<div class="col-md-9 mt-sm-10 left-align-p">
+								<p>Durante este taller realizado conjuntamente con Bioincuba se logró generar ideas innovadoras centrandonos en dar solución a las necesidades reales del paciente</p>
+								<p>Empatizar: entender la forma en que las personas hacen las cosas y por qué, sus necesidades físicas y emocionales, cómo piensan en el mundo, y lo que es significativo para ellos.</p>
+							</div>
 			<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
-						<h2 class="mb-30">Incidencia en el mundo</h2>
+						<h2 class="mb-30">DINAMICA 1 : MAPA EMPATIA</h2>
 						</div>
 					         <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>La incidencia de la lesión de medula espinal (LME), tanto traumáticas como no traumáticas probablemente se sitúe entre 40 y 80 casos por millón de habitantes.Sobre la base de la población mundial estimada en 2012, entre 250.000 y 500.000 personas sufren una LME.</p>
+								<p>Consistio en "ponernos en los zapatos" del paciente para identificar diferentes actitudes que tomaria el paciente frente al problema que sufre y como sentiria que la veria la sociedad.</p>
 								<p>La incidencia de las LME traumáticas declarada en estudios por países varía entre 13 por millón y 53 por millón. Históricamente, hasta el 90 por ciento de las LME han sido de origen traumático, pero datos de los estudios más recientes indican una leve tendencia al aumento de las LME no traumáticas. Los estudios disponibles reportan una incidencia de las LME no traumáticas de 26 por millón.(OMS)[1] </p>
 							</div>
 							<div class="row">
 							<div class="col-md-3">
-								<img src="img/elements/mapa.png" alt="" class="png-fluid">
+								<img src="img/elements/empa1.PNG" alt="" class="png-fluid">
+								<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/empa2.PNG" alt="" class="png-fluid">
+								<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/empatia2.jpg" alt="" class="png-fluid">
 							</div>
 						</div>
 					</div>
