--- a/semana3.html
+++ b/semana3.html
@@ -198,6 +198,24 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 							<div class="col-md-3">
 								<img src="img/elements/empatia2.jpg" alt="" class="png-fluid">
 							</div>
+									<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h2 class="mb-30">DINAMICA 1 : DINAMICA 2: AGRUPACIÓN DE PROBLEMAS</h2>
+						</div>
+					         <div class="col-md-9 mt-sm-10 left-align-p">
+								<p>Definir : es la etapa que trata de dar sentido a la información que se ha reunido y el principal objetivo es crear una declaración de problema significativa y accionable.</p>
+							</div>
+							<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/empa1.PNG" alt="" class="png-fluid">
+								<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/empa2.PNG" alt="" class="png-fluid">
+								<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/empatia2.jpg" alt="" class="png-fluid">
+							</div>
 						</div>
 					</div>
 			<!-- End Sample Area -->
