--- a/semana3.html
+++ b/semana3.html
@@ -214,7 +214,7 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 								<img src="img/elements/empa2.PNG" alt="" class="png-fluid">
 								<div class="row">
 							<div class="col-md-3">
-								<img src="img/elements/empatia2.jpg" alt="" class="png-fluid">
+								<img src="img/elements/empa3.PNG" alt="" class="png-fluid">
 							</div>
 						</div>
 					</div>
@@ -274,7 +274,7 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 							<div class="col-md-9 mt-sm-20 left-align-p">
 					       <p>El sistema ReWalkTM, también llamado exoesqueleto, es una ortesis de marcha alternante (RGO) motorizada. Está constituido por unos soportes motorizados de activación del movimiento que se colocan en las extremidades inferiores, una plataforma dinámica para evitar el pie equino,unos sensores de movimiento, un arnés y una mochila que transporta un procesador y dos baterías recargables. El paciente ordena los movimientos a través de un control remoto colocado en la muñeca y se ayuda de muletas para mantener el equilibrio. Tras programar el tipo de movimiento (ponerse de pie, sentarse, caminar, pararse, subir y bajar escaleras), los sensores detectan la inclinación del tronco hacia delante, y transmiten una señal para el inicio de la deambulación. La velocidad de marcha del dispositivo se modifica en función de las necesidades de la persona.</p>
 						</div>
-						</div>
+					 </div>
 					</div>
 				<div class="whole-wrap">
 				<div class="container">
