--- a/semana3.html
+++ b/semana3.html
@@ -208,13 +208,13 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 							</div>
 							<div class="row">
 							<div class="col-md-3">
-								<img src="img/elements/empa1.PNG" alt="" class="png-fluid">
+								<img src="img/elements/q1.PNG" alt="" class="png-fluid">
 								<div class="row">
 							<div class="col-md-3">
-								<img src="img/elements/empa2.PNG" alt="" class="png-fluid">
+								<img src="img/elements/q2.PNG" alt="" class="png-fluid">
 								<div class="row">
 							<div class="col-md-3">
-								<img src="img/elements/empa3.PNG" alt="" class="png-fluid">
+								<img src="img/elements/q3.PNG" alt="" class="png-fluid">
 							</div>
 						</div>
 					</div>
