--- a/semana3.html
+++ b/semana3.html
@@ -198,10 +198,52 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 							<div class="col-md-3">
 								<img src="img/elements/empa3.PNG" alt="" class="png-fluid">
 							</div>
-									<div class="whole-wrap">
+					       </div>
+					</div>
+				<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
 						<h2 class="mb-30">DINAMICA 2: AGRUPACIÓN DE PROBLEMAS</h2>
+						</div>
+					         <div class="col-md-9 mt-sm-10 left-align-p">
+								<p>Definir : es la etapa que trata de dar sentido a la información que se ha reunido y el principal objetivo es crear una declaración de problema significativa y accionable.</p>
+							</div>
+							<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/q1.PNG" alt="" class="png-fluid">
+								<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/q2.PNG" alt="" class="png-fluid">
+								<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/q3.PNG" alt="" class="png-fluid">
+							</div>
+						</div>
+					</div>
+									<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h2 class="mb-30">DINAMICA 3: ANALISIS RAIZ CAUSA</h2>
+						</div>
+					         <div class="col-md-9 mt-sm-10 left-align-p">
+								<p>Se realizó el ejercicio de los 5 por que, que tuvo como objetivo que los integantes reflexionen acerca del contexto que hay alrededor del problema que sufre el paciente, para descubrir la raíz de dicho problema. De ésta forma fue más fácil establecer una nueva estrategia, iniciándola desde su origen.</p>
+							</div>
+							<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/q1.PNG" alt="" class="png-fluid">
+								<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/q2.PNG" alt="" class="png-fluid">
+								<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/q3.PNG" alt="" class="png-fluid">
+							</div>
+						</div>
+					</div>
+									<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h2 class="mb-30">DINÁMICA 4: BRAINSTORMING</h2>
 						</div>
 					         <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>Definir : es la etapa que trata de dar sentido a la información que se ha reunido y el principal objetivo es crear una declaración de problema significativa y accionable.</p>
