--- a/semana3.html
+++ b/semana3.html
@@ -237,6 +237,51 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 								<div class="row">
 							<div class="col-md-3">
 								<img src="img/elements/q3.PNG" alt="" class="png-fluid">
+								<!-- Start feature Area -->
+			<section class="feature-area">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-4">
+							<div class="single-feature">
+								<div class="title">
+									<h4>¿Por que no puede caminar ?</h4>
+								</div>
+								<div class="desc-wrap">
+									<p>
+										Porque tiene pie equino varo,que impide que realize la marcha. 
+										
+									</p>
+												
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<div class="single-feature">
+								<div class="title">
+									<h4>¿Por que tiene pie equino varo ?</h4>
+								</div>
+								<div class="desc-wrap">
+									<p>
+										Porque los tendones del talón se han dañado por la inmovilidad del pie a causa de la paraplejia.								
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<div class="single-feature">
+								<div class="title">
+									<h4>¿Por que tiene paraplejia ?</h4>
+								</div>
+								<div class="desc-wrap">
+									<p>
+										Porque sufrio un traumatismo vertebro medular L5 .
+									</p>
+								</div>
+							</div>
+						</div>												
+					</div>
+				</div>	
+			</section>
+			<!-- End feature Area -->
 							</div>
 						</div>
 					</div>
