--- a/semana3.html
+++ b/semana3.html
@@ -200,6 +200,9 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 							</div>
 					       </div>
 					</div>
+									<!-- End banner Area -->	
+
+			<!-- Start Sample Area -->
 				<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
@@ -220,6 +223,9 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 							</div>
 						</div>
 					</div>
+								<!-- End banner Area -->	
+
+			<!-- Start Sample Area -->	
 									<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
