--- a/semana3.html
+++ b/semana3.html
@@ -382,6 +382,7 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 							</div>
 						</div>
 					</div>
+					<!-- Start Align Area -->
 					<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
@@ -395,7 +396,8 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 							  <p>-Innovative neurotronics. (2006). Manual del usuario del sistema Walkaide. Medical Device & QA Services.</p>
 					                  </div>
 					        </div>
-					</div>				
+					</div>	
+					<!-- End Sample Area -->
 		</body>
 	</html>
 
