--- a/semana3.html
+++ b/semana3.html
@@ -297,17 +297,14 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 						<h2 class="mb-30">DINÁMICA 4: BRAINSTORMING</h2>
 						</div>
 					         <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>Definir : es la etapa que trata de dar sentido a la información que se ha reunido y el principal objetivo es crear una declaración de problema significativa y accionable.</p>
+								<p>Definir : Es la etapa que trata de dar sentido a la información que se ha reunido y el principal objetivo es crear una declaración de problema significativa y accionable.</p>
 							</div>
 							<div class="row">
 							<div class="col-md-3">
-								<img src="img/elements/q1.PNG" alt="" class="png-fluid">
+								<img src="img/elements/br1.PNG" alt="" class="png-fluid">
 								<div class="row">
 							<div class="col-md-3">
-								<img src="img/elements/q2.PNG" alt="" class="png-fluid">
-								<div class="row">
-							<div class="col-md-3">
-								<img src="img/elements/q3.PNG" alt="" class="png-fluid">
+								<img src="img/elements/br2.PNG" alt="" class="png-fluid">
 							</div>
 						</div>
 					</div>
