--- a/semana3.html
+++ b/semana3.html
@@ -278,6 +278,7 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 				</div>	
 			</section>
 			<!-- End feature Area -->
+					<!-- Start Sample Area -->	
 							</div>
 						</div>
 					</div>
@@ -299,7 +300,6 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 						</div>
 					</div>
 			<!-- End Sample Area -->
-			<!-- Start Align Area -->
 					<!-- Start Sample Area -->
 		        <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
