--- a/semana3.html
+++ b/semana3.html
@@ -226,7 +226,7 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 								<!-- End banner Area -->	
 
 			<!-- Start Sample Area -->	
-									<div class="whole-wrap">
+			        <div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
 						<h2 class="mb-30">DINAMICA 3: ANALISIS RAIZ CAUSA</h2>
@@ -278,6 +278,8 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 				</div>	
 			</section>
 			<!-- End feature Area -->
+					<!-- End banner Area -->
+					
 					<!-- Start Sample Area -->	
 							</div>
 						</div>
