--- a/semana4.html
+++ b/semana4.html
@@ -93,7 +93,7 @@
 			</section>
 			<!-- End Sample Area -->
 				<!-- Start Align Area -->
-				<div class="section-top-border">
+				<div class="section-top-center">
 						<div class="row gallery-item">
 							<div class="col-md-4">
 								<a href="img/elements/plan.png.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/plan.png.png);"></div></a>
@@ -109,6 +109,13 @@
 						<div class="row gallery-item">
 							<div class="col-md-4">
 								<a href="img/elements/crono1.png.png" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/crono1.png.png);"></div></a>
+							</div>
+						</div>
+					</div>
+				<!-- Start Align Area -->	
+			<div class="row">
+		        <div class="col-md-6">
+		        <img src="img/elements/requerimientos.png" alt="" class="png-fluid">
 							</div>
 						</div>
 					</div>
