--- a/semana4.html
+++ b/semana4.html
@@ -95,7 +95,7 @@
 				<!-- Start Align Area -->
 				<div class="section-top-center">
 					<div style="text-align:center">
-						<div class="row gallery-item">
+						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
 								<a href="img/elements/plan.png.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/plan.png.png);"></div></a>
 						          </div>
@@ -108,8 +108,8 @@
 				</div>
 			</section>
 				
-					<div class="section-top-center">
-						<div style="text-align:center">
+					<div class="section-top-center  justify-content-center">
+						<div style="text-align:center ">
 						<div class="row gallery-item">
 							<div class="col-md-4">
 								<a href="img/elements/crono1.png.png" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/crono1.png.png);"></div></a>
