--- a/semana4.html
+++ b/semana4.html
@@ -97,20 +97,21 @@
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-								<a href="img/elements/plan.png.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/plan.png.png);"></div></a>
+								<a href="img/elements/plan.png.png" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/plan.png.png);"></div></a>
 						          </div>
 					        </div>
 					</div>
-				
+				<!-- Start Sample Area -->
 				 <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
 					<h1 class="text-black">CRONOGRAMA</h1>	
 				</div>
 			</section>
-				
-					<div class="section-top-center  justify-content-center">
-						<div style="text-align:center ">
-						<div class="row gallery-item">
+					<!-- End Sample Area -->
+					<!-- Start Align Area -->
+					<div class="section-top-center">
+					<div style="text-align:center">
+				            <div class="section-top-center  justify-content-center">
 							<div class="col-md-4">
 								<a href="img/elements/crono1.png.png" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/crono1.png.png);"></div></a>
 							</div>
