--- a/semana4.html
+++ b/semana4.html
@@ -107,16 +107,17 @@
 					<h1 class="text-black">CRONOGRAMA</h1>	
 				</div>
 			</section>
-					<!-- End Sample Area -->
+		        <!-- End Sample Area -->
 					<!-- Start Align Area -->
 					<div class="section-top-center">
 					<div style="text-align:center">
-				            <div class="section-top-center  justify-content-center">
+						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
 								<a href="img/elements/crono1.png.png" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/crono1.png.png);"></div></a>
 							</div>
 						</div>
 					</div>
+		        <!-- End Sample Area -->
 		</body>
 	</html>
 
