--- a/semana5.html
+++ b/semana5.html
@@ -86,6 +86,15 @@
 			<!-- End banner Area -->	
 
 			<!-- Start Sample Area -->
+				 <div class="col-md-9 mt-sm-10 left-align-p">
+								<p>Una vez que hemos desarrollado los conceptos que cumplen la estrategia, debemos evaluarlos bajo el criterio de funcionalidad, para ello utilizamos los siguientes cuadros.</p>
+							</div>
+							<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/mapa.png" alt="" class="png-fluid">
+							</div>
+						</div>
+					</div>
 		        <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
 					<h1 class="text-black">CRONOGRAMA</h1>	
