--- a/semana5.html
+++ b/semana5.html
@@ -83,7 +83,14 @@
 					</div>
 				</div>
 			</section>
-			<!-- End banner Area -->	
+			<!-- End banner Area -->
+				<!-- Start Sample Area -->
+		        <section class="row d-flex align-items-center justify-content-center">
+				<div class="about-content col-lg-12">
+					<h1 class="text-black">Desarrollo de conceptos</h1>	
+				</div>
+			</section>
+			<!-- End Sample Area -->
 
 			<!-- Start Sample Area -->
 				 <div class="col-md-9 mt-sm-10 left-align-p">
