--- a/semana5.html
+++ b/semana5.html
@@ -96,38 +96,26 @@
 				 <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>Una vez que hemos desarrollado los conceptos que cumplen la estrategia, debemos evaluarlos bajo el criterio de funcionalidad, para ello utilizamos los siguientes cuadros.</p>
 							</div>
+				<!-- End Sample Area -->
+
+				<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h2 class="mb-30">Evaluación de conceptos</h2>
+						</div>
+					         <div class="row">
+						<div class="col-md-3">
+								<img src="img/elements/mapa.png" alt="" class="png-fluid">
+							</div>
+						</div>
+					</div>
 							<div class="row">
 							<div class="col-md-3">
 								<img src="img/elements/mapa.png" alt="" class="png-fluid">
 							</div>
 						</div>
 					</div>
-		        <section class="row d-flex align-items-center justify-content-center">
-				<div class="about-content col-lg-12">
-					<h1 class="text-black">CRONOGRAMA</h1>	
-				</div>
-			</section>
-			<!-- End Sample Area -->
-				<!-- Start Align Area -->
-				<div class="section-top-border">
-						<div class="row gallery-item">
-							<div class="col-md-4">
-								<a href="img/elements/crono1.png.png" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/crono1.png.png);"></div></a>
-						          </div>
-					        </div>
-					</div>
-				 <section class="row d-flex align-items-center justify-content-center">
-				<div class="about-content col-lg-12">
-					<h1 class="text-black">PLAN DE TRABAJO</h1>	
-				</div>
-			</section>
-					<div class="section-top-center">
-						<div class="row gallery-item">
-							<div class="col-md-4">
-								<a href="img/elements/plan.png.png" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/plan.png.png);"></div></a>
-							</div>
-						</div>
-					</div>
+		      
 
 		</body>
 	</html>
