--- a/semana5.html
+++ b/semana5.html
@@ -96,27 +96,26 @@
 				 <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>Una vez que hemos desarrollado los conceptos que cumplen la estrategia, debemos evaluarlos bajo el criterio de funcionalidad, para ello utilizamos los siguientes cuadros.</p>
 							</div>
-				<!-- End Sample Area -->
-
-				<div class="whole-wrap">
-				<div class="container">
-					<div class="section-top-border">
-						<h2 class="mb-30">Evaluación de conceptos</h2>
-						</div>
-					         <div class="row">
-						<div class="col-md-3">
-								<img src="img/elements/mapa.png" alt="" class="png-fluid">
-							</div>
-						</div>
+				<div class="section-top-center">
+					<div style="text-align:center">
+						<div class="row gallery-item  justify-content-center">
+							<div class="col-md-4">
+							<img src="img/elements/cuadro1.png" alt="" class="png-fluid">
+						          </div>
+							<div class="section-top-center">
+					<div style="text-align:center">
+						<div class="row gallery-item  justify-content-center">
+							<div class="col-md-4">
+							<img src="img/elements/cuadro2.png" alt="" class="png-fluid">
+					        </div>
+							<div class="section-top-center">
+					<div style="text-align:center">
+						<div class="row gallery-item  justify-content-center">
+							<div class="col-md-4">
+							<img src="img/elements/cuadro3.png" alt="" class="png-fluid">
+					       </div>
 					</div>
-							<div class="row">
-							<div class="col-md-3">
-								<img src="img/elements/mapa.png" alt="" class="png-fluid">
-							</div>
-						</div>
-					</div>
-		      
-
+				</div>
 		</body>
 	</html>
 
