--- a/semana5.html
+++ b/semana5.html
@@ -100,19 +100,19 @@
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-							<img src="img/elements/cuadro1.png" alt="" class="png-fluid">
+							<img src="img/elements/cuadro1.PNG" alt="" class="png-fluid">
 						          </div>
 							<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-							<img src="img/elements/cuadro2.png" alt="" class="png-fluid">
+							<img src="img/elements/cuadro2.PNG" alt="" class="png-fluid">
 					        </div>
 							<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-							<img src="img/elements/cuadro3.png" alt="" class="png-fluid">
+							<img src="img/elements/cuadro3.PNG" alt="" class="png-fluid">
 					       </div>
 					</div>
 				</div>
