--- a/semana5.html
+++ b/semana5.html
@@ -120,6 +120,17 @@
 					       </div>
 					</div>
 				</div>
+								<!-- End Sample Area -->
+								<!-- Start Sample Area -->
+				 <div class="col-md-9 mt-sm-10 left-align-p">
+								<p>0= No satisface</p>
+					 <p>1= Aceptable</p>
+					 <p>2= Suficiente</p>
+					 <p>3= Bien </p>
+					 <p>4= Muy bien (ideal)</p>
+					 <p>Proyecto óptimo: Propuesta de solución 3</p>
+							</div>
+								
 		</body>
 	</html>
 
