--- a/semana6.html
+++ b/semana6.html
@@ -77,21 +77,13 @@
 							<h1 class="text-white">
 								SEMANA N°5
 						        <h1 class="text-white">
-								Conceptos de solución
+								Diseño modular de la propuesta
 							</h1>	
 						</div>	
 					</div>
 				</div>
 			</section>
 			<!-- End banner Area -->
-				<!-- Start Sample Area -->
-		        <section class="row d-flex align-items-center justify-content-center">
-				<div class="about-content col-lg-12">
-					<h1 class="text-black">Diseño modular de la propuesta</h1>	
-				</div>
-			</section>
-			<!-- End Sample Area -->
-
 			<!-- Start Sample Area -->
 				 <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>Para el diseño modular necesitamos identificar las entradas y salidas de los sistemas.</p>
@@ -105,15 +97,22 @@
 					</div>
 				</div>
 			<!-- End Sample Area -->
-								<!-- Start Sample Area -->
-				 <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>0= No satisface</p>
-					 <p>1= Aceptable</p>
-					 <p>2= Suficiente</p>
-					 <p>3= Bien </p>
-					 <p>4= Muy bien (ideal)</p>
-					 <p>Proyecto óptimo: Propuesta de solución 3</p>
+			<!-- Start Sample Area -->
+					<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h3 class="mb-30">Lista de materiales</h3>
+						<div class="row">
+						<div class="col-md-9 mt-sm-10 left-align-p">
+						<p>1.Escaner 3D </p>
+						<p>2.Espuma de polietileno 2mmx10m</p>
+					        <p>3.Velcro x3u</p>
+					        <p>4.Lámina de Polietileno x10m</p>
+					       <p>5.Banda elástica de resistencia x4u</p>
+					       <p>6.Tornillos</p>
 							</div>
-								
+						</div>
+					</div>
+				 
 		</body>
 	</html>
