--- a/semana6.html
+++ b/semana6.html
@@ -75,7 +75,7 @@
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content col-lg-12">
 							<h1 class="text-white">
-								SEMANA N°5
+								SEMANA N°6
 						        <h1 class="text-white">
 								Diseño modular de la propuesta
 							</h1>	
@@ -88,14 +88,16 @@
 				 <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>Para el diseño modular necesitamos identificar las entradas y salidas de los sistemas.</p>
 							</div>
+				<!-- End Sample Area -->
+				<!-- Start Sample Area -->
 				<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-							<img src="img/elements/123.PNG" alt="" class="png-fluid">
-						</div>
+								<a href="img/elements/123.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image"></div></a>
+						          </div>
+					        </div>
 					</div>
-				</div>
 			<!-- End Sample Area -->
 			<!-- Start Sample Area -->
 					<div class="whole-wrap">
