--- a/events.html
+++ b/events.html
@@ -159,7 +159,7 @@
 								<div class="detials col-12 col-md-6">
 									<p>Abril, 2019</p>
 									<a href="semana6.html"><h4>Semana 6</h4></a>
-									<p>semana6</p>
+									<p>Diseño modular de la propuesta</p>
 								</div>
 							</div>
 						</div>
