--- a/semana6.html
+++ b/semana6.html
@@ -91,10 +91,11 @@
 				<!-- End Sample Area -->
 				<!-- Start Sample Area -->
 				<div class="section-top-center">
+					<div class="section-top-center">
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-								<a href="img/elements/123.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image"></div></a>
+								<a href="img/elements/123.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/123.PNG);"></div></a>
 						          </div>
 					        </div>
 					</div>
