--- a/semana5.html
+++ b/semana5.html
@@ -94,7 +94,7 @@
 
 			<!-- Start Sample Area -->
 				 <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>Una vez que hemos desarrollado los conceptos que cumplen la estrategia, debemos evaluarlos bajo el criterio de funcionalidad, para ello utilizamos los siguientes \s.</p>
+								<p>Una vez que hemos desarrollado los conceptos que cumplen la estrategia, debemos evaluarlos bajo el criterio de funcionalidad, para ello utilizamos los siguientes.</p>
 							</div>
 				<div class="section-top-center">
 					<div style="text-align:center">
