--- a/events.html
+++ b/events.html
@@ -1,6 +1,7 @@
 	<!DOCTYPE html>
 	<html lang="zxx" class="no-js">
 	<head>
+		
 		<!-- Mobile Specific Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- Favicon-->
@@ -31,7 +32,7 @@
 			<link rel="stylesheet" href="css/main.css">
 		</head>
 		<body>	
-		  <header id="header" id="home">
+		  <header id="header" id="Inicio">
 	  		<div class="header-top">
 	  			<div class="container">
 			  		<div class="row">
@@ -59,15 +60,13 @@
 			        <ul class="nav-menu">
 			          <li><a href="index.html">Inicio</a></li>
 			          <li><a href="about.html">Nosotros</a></li>
-			          <li><a href="events.html">Proyecto</a></li>			                		
-			           </ul>
-			          </li>					          					          		          
-			          <li><a href="contact.html">Contact</a></li>
+			          <li><a href="events.html">Proyecto</a></li>
 			        </ul>
 			      </nav><!-- #nav-menu-container -->		    		
 		    	</div>
 		    </div>
 		  </header><!-- #header -->
+
 			  
 			<!-- start banner Area -->
 			<section class="banner-area relative about-banner" id="home">	
