--- a/semana3.html
+++ b/semana3.html
@@ -268,8 +268,29 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 		        <div class="col-md-3">
 		        <img src="img/elements/requerimientos.png" alt="" class="png-fluid">
 							</div>
+				<!-- Start Align Area -->
+					<div class="col-md-9 mt-sm-10 left-align-p">
+								<p>Durante este taller realizado conjuntamente con Bioincuba se logró generar ideas innovadoras centrandonos en dar solución a las necesidades reales del paciente</p>
+								<p>Empatizar: entender la forma en que las personas hacen las cosas y por qué, sus necesidades físicas y emocionales, cómo piensan en el mundo, y lo que es significativo para ellos.</p>
+							</div>
+			<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h2 class="mb-30">DINAMICA 1 :REQUERIMIENTOS PARA EL DISEÑO DE LA ORTESIS</h2>
 						</div>
+					         <div class="col-md-9 mt-sm-10 left-align-p">
+								<p>RÍGIDO Y DINÁMICO: La importancia de una ortesis dinámica es esencial para el usuario  ya que le permite más libertad y movimiento.</p>
+								<p>LIGERO Y RESISTENTE: La ortesis es necesariamente portátil por lo que tiene que ser ligera y resistente a la misma vez.</p>
+							 <p>FÁCIL DE USAR: En las condiciones del usuario el factor de usabilidad tiene que adecuarse a las limitaciones que presenta. </p>
+								<p>ERGONÓMICO: La ortesis tiene que coincidir con las características fisiológicas y anatómicas para que el usuario interactúe de la mejor manera con el dispositivo.</p>
+							 <p>BIOCOMPATIBLE: El material usado en la ortesis debe ser biocompatible es decir no debe generar rechazo por parte del organismo del usuario </p>
+								<p>MATERIAL DE AJUSTE: Un material que sea capaz de realizar uniones ajustables ligeras de manera rápida y sencilla y a su vez no generar dolor incomodidad al usuario.  </p>
+							 <p>MANUFACTURA: Proceso de fabricación a base de láminas de propileno a calor tomando un molde de pie escaneado en 3D.</p>
+								<p>PERSONALIZADO:El diseño personalizado tiene énfasis en aspectos como el estudio de la pisada del paciente, la adaptación de la plantilla al pie y un buen acabado de la misma para un uso cómodo y efectivo.</p>
+							</div>
+					       </div>
 					</div>
+			<!-- End banner Area -->	
 					<!-- Start Sample Area -->
 		        <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
