--- a/semana3.html
+++ b/semana3.html
@@ -268,6 +268,7 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 		        <div class="col-md-3">
 		        <img src="img/elements/requerimientos.png" alt="" class="png-fluid">
 							</div>
+				<!-- End Sample Area -->
 				<!-- Start Align Area -->
 					<div class="col-md-9 mt-sm-10 left-align-p">
 								<p>Durante este taller realizado conjuntamente con Bioincuba se logró generar ideas innovadoras centrandonos en dar solución a las necesidades reales del paciente</p>
@@ -290,7 +291,7 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 							</div>
 					       </div>
 					</div>
-			<!-- End banner Area -->	
+		                      <!-- End Sample Area -->	
 					<!-- Start Sample Area -->
 		        <section class="row d-flex align-items-center justify-content-center">
 				<div class="about-content col-lg-12">
