--- a/semana3.html
+++ b/semana3.html
@@ -179,6 +179,9 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 								<p>Durante este taller realizado conjuntamente con Bioincuba se logró generar ideas innovadoras centrandonos en dar solución a las necesidades reales del paciente</p>
 								<p>Empatizar: entender la forma en que las personas hacen las cosas y por qué, sus necesidades físicas y emocionales, cómo piensan en el mundo, y lo que es significativo para ellos.</p>
 							</div>
+					<!-- End Sample Area -->
+					<!-- Start Align Area -->
+					
 			<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
