--- a/semana3.html
+++ b/semana3.html
@@ -276,7 +276,7 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 			<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
-						<h2 class="mb-30">DINAMICA 1 :REQUERIMIENTOS PARA EL DISEÑO DE LA ORTESIS</h2>
+						<h2 class="mb-30">REQUERIMIENTOS PARA EL DISEÑO DE LA ORTESIS</h2>
 						</div>
 					         <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>RÍGIDO Y DINÁMICO: La importancia de una ortesis dinámica es esencial para el usuario  ya que le permite más libertad y movimiento.</p>
