--- a/semana4.html
+++ b/semana4.html
@@ -97,7 +97,7 @@
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-								<a href="img/elements/plan.png.png" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/plan.png.png);"></div></a>
+								<a href="img/elements/plan.png.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/plan.png.PNG);"></div></a>
 						          </div>
 					        </div>
 					</div>
@@ -113,7 +113,7 @@
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-								<a href="img/elements/crono1.png.png" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/crono1.png.png);"></div></a>
+								<a href="img/elements/crono1.png.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/crono1.png.PNG);"></div></a>
 							</div>
 						</div>
 					</div>
