--- a/semana3.html
+++ b/semana3.html
@@ -95,13 +95,42 @@
 			<!-- End Sample Area -->
 			
 			<!-- Start Align Area -->
+				<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h3 class="mb-30">ORTESIS DAFO</h3>
+						<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/dafo.png" alt="" class="img-fluid">
+							</div>
+							<div class="col-md-9 mt-sm-20 left-align-p">
+								<p>“Dynamic Ankle Foot Orthosis” por sus siglas en inglés, se trata de una ortesis dinámica de tobillo-pie. Se diferencia de las ortesis tradicionales rígidas en que están fabricadas en un material único, más flexible, que permite mayor rango de movimiento del tobillo.
+Estas ortesis corrigen o controlan las alteraciones en la posición del pie de origen neuromuscular que influye en las demás partes del cuerpo, optimizando la biomecánica de la marcha.
+Los DAFOs son flexibles y se adaptan íntimamente a los contornos del pie ya que se fabrican a medida, lo que mejora la corrección y el confort de la ortesis.
+</p>
+							</div>
+						</div>
+					</div>
+					<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h3 class="mb-30">ORTESIS AFO</h3>
+						<div class="row">
+							<div class="col-md-3">
+								<img src="img/elements/ortesis1.png" alt="" class="img-fluid">
+							</div>
+							<div class="col-md-9 mt-sm-20 left-align-p">
+								<p>Las A.F.O. estabilizan el tobillo y el pie, por lo que tienen forma de L. Están fabricadas de termoplástico o carbono, y cubren el tobillo y el pie, manteniendo a este último a 90°. Su principal función es ayudar a levantar el pie y controlarlo al caminar. En algunos casos, presenta una estructura ajustada para efectos en su rehabilitación.</p>
+							</div>
+						</div>
+					</div>
 			<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
 						<h3 class="mb-30">DINAMIC WALK</h3>
 						<div class="row">
 							<div class="col-md-3">
-								<img src="img/elements/ortesis1.png" alt="" class="img-fluid">
+								<img src="img/elements/afo.png" alt="" class="img-fluid">
 							</div>
 							<div class="col-md-9 mt-sm-20 left-align-p">
 								<p>Nueva ortesis de tobillo y pie que asiste a la dorsiflexión del pie, evitando el equinismo. Realizada en fibra de carbono, lo que proporciona una gran ligereza y la capacidad de termoconformación. Diseñada para un nivel de actividad alto permite al paciente andar y correr sin necesidad de correas, manteniendo la posición dinámica del conjunto pie-tobillo Su diseño con el talón abierto nos proporciona un óptimo ajuste y confort para los diferentes tipos de calzado. Posibilidad de almohadilla para mayor confort del paciente,con tirantes en la zona lateral, fácil de quitarse y ponerse,se adapta fácilmente a calzado normal / extrecho.</p>
@@ -345,6 +374,7 @@ Se extiende en su cara palmar hasta los metatarsianos y en ocasiones hasta la pu
 							</div>
 						</div>
 					</div>
+					<!-- End Sample Area -->
 					<!-- Start Align Area -->
 					<div class="whole-wrap">
 				<div class="container">
