--- a/semana4.html
+++ b/semana4.html
@@ -113,7 +113,7 @@
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-								<a href="img/cro.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/cro.PNG);"></div></a>
+								<a href="img/cro2.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/cro2.PNG);"></div></a>
 							</div>
 						</div>
 					</div>
