--- a/semana2.html
+++ b/semana2.html
@@ -100,7 +100,7 @@
 						</div>
 					         <div class="col-md-9 mt-sm-10 left-align-p">
 								<p>La incidencia de la lesión de medula espinal (LME), tanto traumáticas como no traumáticas probablemente se sitúe entre 40 y 80 casos por millón de habitantes.Sobre la base de la población mundial estimada en 2012, entre 250.000 y 500.000 personas sufren una LME.</p>
-								<p>La incidencia de las LME traumáticas declarada en estudios por países varía entre 13 por millón y 53 por millón. Históricamente, hasta el 90 por ciento de las LME han sido de origen traumático, pero datos de los estudios más recientes indican una leve tendencia al aumento de las LME no traumáticas. Los estudios disponibles reportan una incidencia de las LME no traumáticas de 26 por millón.(OMS)[1] </p>
+								<p>La incidencia de las LME traumáticas declarada en estudios por países varía entre 13 por millón y 53 por millón. Históricamente, hasta el 90 por ciento de las LME han sido de origen traumático, pero datos de los estudios más recientes indican una leve tendencia al aumento de las LME no traumáticas. Los estudios disponibles reportan una incidencia de las LME no traumáticas de 26 por millón.(OMS) </p>
 							</div>
 							<div class="row">
 							<div class="col-md-3">
@@ -114,7 +114,7 @@
 						<h2 class="mb-30">¿ Qué es la paraplejia ?</h2>
 						</div>
 					         <div class="col-md-9 mt-sm-20 left-align-p">
-								<p>La American Spinal Injury Association (ASIA) define Paraplejia como “término que se refiere al déficit o pérdida de función motora y/o sensitiva en los segmentos torácicos, lumbares o sacros de la médula espinal (pero no cervicales), secundarios al daño de los elementos neurales del canal raquídeo. En la paraplejia, la función de los brazos está preservada, pero dependiendo del nivel de lesión, el tronco, piernas y órganos pélvicos estarán implicados.[2]</p>
+								<p>La American Spinal Injury Association (ASIA) define Paraplejia como “término que se refiere al déficit o pérdida de función motora y/o sensitiva en los segmentos torácicos, lumbares o sacros de la médula espinal (pero no cervicales), secundarios al daño de los elementos neurales del canal raquídeo. En la paraplejia, la función de los brazos está preservada, pero dependiendo del nivel de lesión, el tronco, piernas y órganos pélvicos estarán implicados.</p>
                                                          </div>
 					        </div>
 					</div>
@@ -124,7 +124,7 @@
 						<h2 class="mb-30">Escala de ASIA:</h2>
 						</div>
 					         <div class="col-md-9 mt-sm-20 left-align-p">
-								<p>La escala de ASIA describe la exploración de la sensibilidad y movilidad, evaluando: nivel neurológico, nivel sensitivo, nivel motor (lados izquierdo y derecho) y zonas de preservación parcial (Cohen ME, Ditunno JF, Donovan WH, Maynard FM,1992).[3]</p>
+								<p>La escala de ASIA describe la exploración de la sensibilidad y movilidad, evaluando: nivel neurológico, nivel sensitivo, nivel motor (lados izquierdo y derecho) y zonas de preservación parcial (Cohen ME, Ditunno JF, Donovan WH, Maynard FM,1992).</p>
 						         </div>
 							<div class="row">
 							<div class="col-md-3">
@@ -152,7 +152,7 @@
 						<h2 class="mb-30">Causas y sintomas</h2>
 						</div>
 					         <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>La paraplejía puede aparecer después de una lesión en la médula espinal. Se produce por los daños en las vértebras, los ligamentos o los discos de la columna vertebral.[4]</p>
+								<p>La paraplejía puede aparecer después de una lesión en la médula espinal. Se produce por los daños en las vértebras, los ligamentos o los discos de la columna vertebral.</p>
 								<p>Algunos de los signos y síntomas de urgencia de una lesión de la médula espinal después de un accidente pueden comprender:
 Dolor de espalda intenso o presión en el cuello, la cabeza o la espalda
 
@@ -166,7 +166,7 @@ Dificultad para mantener el equilibrio y caminar
 
 Insuficiencia respiratoria luego de la lesión
 
-Posición extraña o torcida del cuello o la     espalda [5]</p>
+Posición extraña o torcida del cuello o la     espalda </p>
 							</div>
 							<div class="row">
 							<div class="col-md-3">
@@ -180,7 +180,7 @@ Posición extraña o torcida del cuello o la     espalda [5]</p>
 						<h2 class="mb-30">Tratamiento</h2>
 						</div>
 					         <div class="col-md-9 mt-sm-20 left-align-p">
-								<p>El tratamiento de las lesiones de la médula espinal se centra en la prevención de más lesiones y en el fortalecimiento de las personas con lesión de la médula espinal para que puedan volver a tener a una vida activa y productiva.[6]</p>
+								<p>El tratamiento de las lesiones de la médula espinal se centra en la prevención de más lesiones y en el fortalecimiento de las personas con lesión de la médula espinal para que puedan volver a tener a una vida activa y productiva.</p>
 						         </div>
 							<div class="row">
 							<div class="col-md-3">
@@ -204,7 +204,7 @@ Posición extraña o torcida del cuello o la     espalda [5]</p>
 							  <p>-Dysreflexia autonómico</p>
 							  <p>-Baja del tono muscular</p>
 							  <p>-Dolor</p>
-							  <p>-Pulmonía y otras complicaciones respiratorias [7]</p>
+							  <p>-Pulmonía y otras complicaciones respiratorias </p>
 							</div>
 						</div>
 					</div>
