--- a/events.html
+++ b/events.html
@@ -183,6 +183,21 @@
 									<a href="semana8.html"><h4>Semana 8</h4></a>
 									<p>semana8</p>
 								</div>
+								<div class="detials col-12 col-md-6">
+									<p>Abril, 2019</p>
+									<a href="semana9html"><h4>Semana 8</h4></a>
+									<p>semana9/p>
+								</div>
+								<div class="detials col-12 col-md-6">
+									<p>Abril, 2019</p>
+									<a href="semana10tml"><h4>Semana 8</h4></a>
+									<p>semana10>
+								</div>
+								<div class="detials col-12 col-md-6">
+									<p>Abril, 2019</p>
+									<a href="semana11tml"><h4>Semana 8</h4></a>
+									<p>semana11p>
+								</div>
 							</div>
 						</div>
 						<!-- End events-list Area -->
