--- a/events.html
+++ b/events.html
@@ -183,20 +183,35 @@
 									<a href="semana8.html"><h4>Semana 8</h4></a>
 									<p>semana8</p>
 								</div>
-								<div class="detials col-12 col-md-6">
-									<p>Abril, 2019</p>
-									<a href="semana9html"><h4>Semana 8</h4></a>
-									<p>semana9/p>
+								<div class="col-lg-6 pb-30">
+							<div class="single-carusel row align-items-center">
+								<div class="col-12 col-md-6 thumb">
+									<img class="img-fluid" src="img/semana1.PNG" alt="">
 								</div>
 								<div class="detials col-12 col-md-6">
 									<p>Abril, 2019</p>
-									<a href="semana10tml"><h4>Semana 8</h4></a>
-									<p>semana10>
+									<a href="semana9.html"><h4>Semana 8</h4></a>
+									<p>semana9</p>
+								</div>
+								<div class="col-lg-6 pb-30">
+							<div class="single-carusel row align-items-center">
+								<div class="col-12 col-md-6 thumb">
+									<img class="img-fluid" src="img/semana1.PNG" alt="">
 								</div>
 								<div class="detials col-12 col-md-6">
 									<p>Abril, 2019</p>
-									<a href="semana11tml"><h4>Semana 8</h4></a>
-									<p>semana11p>
+									<a href="semana10.html"><h4>Semana 8</h4></a>
+									<p>semana10</p>
+								</div>
+								<div class="col-lg-6 pb-30">
+							<div class="single-carusel row align-items-center">
+								<div class="col-12 col-md-6 thumb">
+									<img class="img-fluid" src="img/semana1.PNG" alt="">
+								</div>
+								<div class="detials col-12 col-md-6">
+									<p>Abril, 2019</p>
+									<a href="semana11.html"><h4>Semana 8</h4></a>
+									<p>semana11</p>
 								</div>
 							</div>
 						</div>
