--- a/events.html
+++ b/events.html
@@ -161,6 +161,42 @@
 								</div>
 							</div>
 						</div>
+						<div class="col-lg-6 pb-30">
+							<div class="single-carusel row align-items-center">
+								<div class="col-12 col-md-6 thumb">
+									<img class="img-fluid" src="img/semana1.PNG" alt="">
+								</div>
+								<div class="detials col-12 col-md-6">
+									<p>Abril, 2019</p>
+									<a href="semana6.html"><h4>Semana 6</h4></a>
+									<p>Diseño modular de la propuesta</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6 pb-30">
+							<div class="single-carusel row align-items-center">
+								<div class="col-12 col-md-6 thumb">
+									<img class="img-fluid" src="img/semana1.PNG" alt="">
+								</div>
+								<div class="detials col-12 col-md-6">
+									<p>Abril, 2019</p>
+									<a href="semana6.html"><h4>Semana 6</h4></a>
+									<p>Diseño modular de la propuesta</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6 pb-30">
+							<div class="single-carusel row align-items-center">
+								<div class="col-12 col-md-6 thumb">
+									<img class="img-fluid" src="img/semana1.PNG" alt="">
+								</div>
+								<div class="detials col-12 col-md-6">
+									<p>Abril, 2019</p>
+									<a href="semana6.html"><h4>Semana 6</h4></a>
+									<p>Diseño modular de la propuesta</p>
+								</div>
+							</div>
+						</div>
 							
 						<!-- End events-list Area -->
 						
