--- a/events.html
+++ b/events.html
@@ -197,6 +197,66 @@
 								</div>
 							</div>
 						</div>
+						<div class="col-lg-6 pb-30">
+							<div class="single-carusel row align-items-center">
+								<div class="col-12 col-md-6 thumb">
+									<img class="img-fluid" src="img/semana1.PNG" alt="">
+								</div>
+								<div class="detials col-12 col-md-6">
+									<p>Abril, 2019</p>
+									<a href="semana10.html"><h4>Semana 10</h4></a>
+									<p>Diseño modular de la propuesta</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6 pb-30">
+							<div class="single-carusel row align-items-center">
+								<div class="col-12 col-md-6 thumb">
+									<img class="img-fluid" src="img/semana1.PNG" alt="">
+								</div>
+								<div class="detials col-12 col-md-6">
+									<p>Abril, 2019</p>
+									<a href="seman11.html"><h4>Semana 11</h4></a>
+									<p>Diseño modular de la propuesta</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6 pb-30">
+							<div class="single-carusel row align-items-center">
+								<div class="col-12 col-md-6 thumb">
+									<img class="img-fluid" src="img/semana1.PNG" alt="">
+								</div>
+								<div class="detials col-12 col-md-6">
+									<p>Abril, 2019</p>
+									<a href="semana12.html"><h4>Semana 12</h4></a>
+									<p>Diseño modular de la propuesta</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6 pb-30">
+							<div class="single-carusel row align-items-center">
+								<div class="col-12 col-md-6 thumb">
+									<img class="img-fluid" src="img/semana1.PNG" alt="">
+								</div>
+								<div class="detials col-12 col-md-6">
+									<p>Abril, 2019</p>
+									<a href="semana13.html"><h4>Semana 13</h4></a>
+									<p>Diseño modular de la propuesta</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6 pb-30">
+							<div class="single-carusel row align-items-center">
+								<div class="col-12 col-md-6 thumb">
+									<img class="img-fluid" src="img/semana1.PNG" alt="">
+								</div>
+								<div class="detials col-12 col-md-6">
+									<p>Abril, 2019</p>
+									<a href="semana14.html"><h4>Semana 14</h4></a>
+									<p>Diseño modular de la propuesta</p>
+								</div>
+							</div>
+						</div>
 							
 						<!-- End events-list Area -->
 						
