--- a/semana9.html
+++ b/semana9.html
@@ -75,9 +75,9 @@
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content col-lg-12">
 							<h1 class="text-white">
-								SEMANA N°6
+								SEMANA N°9
 						        <h1 class="text-white">
-								Diseño modular de la propuesta
+								Fabricación del prototipo funcional
 							</h1>	
 						</div>	
 					</div>
@@ -86,7 +86,8 @@
 			<!-- End banner Area -->
 			<!-- Start Sample Area -->
 				 <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>Para el diseño modular necesitamos identificar las entradas y salidas de los sistemas.</p>
+								<p>Para una mayor ergonomía del prototipo, se procedió a escanear la anatomía de un pie (derecho) utilizando el programa SENSE, para luego imprimirlo y obtener un modelo en 3D sobre el cual trabajar nuestro diseño.
+.</p>
 							</div>
 				<!-- End Sample Area -->
 				<!-- Start Sample Area -->
@@ -102,7 +103,8 @@
 			<!-- End Sample Area -->
 			<!-- Start Sample Area -->
             		 <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>Para el diseño modular necesitamos identificar las entradas y salidas de los sistemas.</p>
+								<p>Usamos como referencia el pie impreso (maniquí) para trabajar e identificar los puntos de ajuste y de soporte para el diseño de nuestra ortesis.
+</p>
 							</div>
 				<!-- End Sample Area -->
 				<!-- Start Sample Area -->
