--- a/semana9.html
+++ b/semana9.html
@@ -96,7 +96,7 @@
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-								<a href="img/elements/123.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/123.PNG);"></div></a>
+								<a href="img/elements/re1.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/re1.PNG);"></div></a>
 						          </div>
 					        </div>
 					</div>
@@ -113,7 +113,7 @@
 					<div style="text-align:center">
 						<div class="row gallery-item  justify-content-center">
 							<div class="col-md-4">
-								<a href="img/elements/123.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/123.PNG);"></div></a>
+								<a href="img/elements/re2.PNG" width="200" height="200" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/re2.PNG);"></div></a>
 						          </div>
 					        </div>
 					</div>
