--- a/semana9.html
+++ b/semana9.html
@@ -91,6 +91,11 @@
 							</div>
 				<!-- End Sample Area -->
 				<!-- Start Sample Area -->
+				<div class="whole-wrap">
+				<div class="container">
+					<div class="section-top-border">
+						<h3 class="mb-30">IMPRESIÓN 3D DEL PIE ESCANEADO</h3>
+							</div>
 				<div class="section-top-center">
 					<div class="section-top-center">
 					<div style="text-align:center">
