--- a/semana9.html
+++ b/semana9.html
@@ -77,7 +77,7 @@
 							<h1 class="text-white">
 								SEMANA N°9
 						        <h1 class="text-white">
-								Fabricación del prototipo funcional
+								Fabricación del módulo principal
 							</h1>	
 						</div>	
 					</div>
@@ -88,10 +88,11 @@
 				<div class="whole-wrap">
 				<div class="container">
 					<div class="section-top-border">
-						<h3 class="mb-30">IMPRESIÓN 3D DEL PIE ESCANEADO</h3>
+						<h3 class="mb-30">DISEÑO Y PREPARACIÓN DEL AFO  </h3>
 							</div>
 				 <div class="col-md-9 mt-sm-10 left-align-p">
-								<p>Para una mayor ergonomía del prototipo, se procedió a escanear la anatomía de un pie (derecho) utilizando el programa SENSE, para luego imprimirlo y obtener un modelo en 3D sobre el cual trabajar nuestro diseño.
+								<p> Después de identificar los criterios para el diseño basándonos  en la marcha del paciente procedemos a desarrollar la ortesis con el programa MeshMixer a partir del modelado 3D, para ello definimos ÁNGULOS Y el radio del circulo de 2.62 cm 
+
 .</p>
 							</div>
 				<div class="section-top-center">
