--- a/events.html
+++ b/events.html
@@ -168,7 +168,7 @@
 								</div>
 								<div class="detials col-12 col-md-6">
 									<p>Abril, 2019</p>
-									<h4>Semana 7</h4></a>
+									<a href="semana7.html"><h4>Semana 7</h4></a>
 									<p>Presentación Elevator Pich</p>
 								</div>
 							</div>
